--- a/padmanaath-yog/package.json
+++ b/padmanaath-yog/package.json
@@ -19,6 +19,7 @@
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
