Force Vercel to use npm instead of pnpm

--- a/padmanaath-yog/vercel.json
+++ b/padmanaath-yog/vercel.json
@@ -11,6 +11,8 @@
         "destination": "https://www.padmanaathyog.com/:path*",
         "permanent": true
       }
-    ]
+    ],
+    "buildCommand": "npm run build",
+    "installCommand": "npm install"
   }
   
